# hermes-template

./: CHANGELOG.md  README.md  pyproject.toml
examples/: template.bat  template.sh  template.yml  video_codec_amd.yml  video_codec_intel.yml  video_codec_jetson.yml  video_codec_nvidia.yml
src/hermes/template/: __init__.py  consumer.py  data_container.py  pipeline.py  producer.py  stream.py
