[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
# TODO: replace `pkgname` and version number
name = "pysio-hermes-pkgname"
dynamic = ["version"]
requires-python = ">=3.7"
authors = [
  { name="Maxim Yudayev", email="maxim.yudayev@gmail.com" },
  { name="e-Media Research Lab @ KU Leuven", email="emedia@kuleuven.be" },
]
# TODO: update the package description
description = "A realtime physiological sensing and edge AI processing framework"
# TODO: add tags
keywords = ["embedded ai", "wearables", "sensors", "streaming", "realtime processing", "physiology"]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Education",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: System :: Distributed Computing"
]
# TODO: add package dependencies
dependencies = [

]

[tool.setuptools.dynamic]
version = {attr = "hermes.pkgname.__version__.__version__"}

[project.urls]
# TODO: update external links
Homepage = "https://yudayev.com/hermes"
Documentation = "https://yudayev.com/hermes"
Repository = "https://github.com/maximyudayev/hermes.git"
Issues = "https://github.com/maximyudayev/hermes/issues"
Changelog = "https://github.com/maximyudayev/hermes/blob/main/CHANGELOG.md"
